fix: 인기 도서 조회 로직 수정 및 매핑 에러 해결